hphp/hack/test/typecheck/instanceof/instanceof_self.php.exp
File "instanceof_self.php", line 16, characters 15-18:
Encountered unexpected text `self`, was expecting a type hint. (Parsing[1002])
File "instanceof_self.php", line 16, characters 19-19:
A scope resolution operator `::` is expected here. (Parsing[1002])
